@@ -2,11 +2,11 @@ package ua.lviv.bas.cinema.controller.api;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -14,21 +14,26 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 
 import ua.lviv.bas.cinema.domain.User;
 import ua.lviv.bas.cinema.domain.enums.TicketStatus;
+import ua.lviv.bas.cinema.dto.common.PageResponse;
+import ua.lviv.bas.cinema.dto.ticket.request.TicketFilterRequest;
 import ua.lviv.bas.cinema.dto.ticket.response.TicketResponse;
 import ua.lviv.bas.cinema.security.CustomUserDetails;
-import ua.lviv.bas.cinema.service.booking.ControllerFacade;
+import ua.lviv.bas.cinema.service.booking.ticket.TicketRetrievalService;
 import ua.lviv.bas.cinema.service.booking.ticket.TicketService;
 
 @ExtendWith(MockitoExtension.class)
 public class TicketControllerTest {
 
 	@Mock
-	private ControllerFacade controllerFacade;
+	private TicketRetrievalService ticketRetrievalService;
 
 	@Mock
 	private TicketService ticketService;
@@ -43,6 +48,11 @@ public class TicketControllerTest {
 		return user;
 	}
 
+	private CustomUserDetails createUserDetails(Long id, String email) {
+		User user = createUser(id, email);
+		return new CustomUserDetails(user);
+	}
+
 	private TicketResponse createTicketResponse(Long id, String ticketCode, TicketStatus status) {
 		return TicketResponse.builder().id(id).ticketCode(ticketCode).status(status).purchaseTime(LocalDateTime.now())
 				.price(new BigDecimal("250.00")).ticketType("Adult").movieTitle("Inception")
@@ -51,70 +61,95 @@ public class TicketControllerTest {
 
 	@Test
 	void getUserTickets_ShouldReturnTickets() {
-		User user = createUser(1L, "user@example.com");
-		CustomUserDetails userDetails = new CustomUserDetails(user);
+		CustomUserDetails userDetails = createUserDetails(1L, "user@example.com");
+		Pageable pageable = PageRequest.of(0, 10);
 
 		TicketResponse ticket1 = createTicketResponse(1L, "TKT-20240115-ABC123", TicketStatus.ACTIVE);
 		TicketResponse ticket2 = createTicketResponse(2L, "TKT-20240115-DEF456", TicketStatus.USED);
-		List<TicketResponse> tickets = Arrays.asList(ticket1, ticket2);
+		Page<TicketResponse> page = new PageImpl<>(List.of(ticket1, ticket2), pageable, 2);
 
-		when(controllerFacade.getUserTickets(user, null)).thenReturn(tickets);
+		when(ticketRetrievalService.getUserTickets(any(User.class), any(TicketFilterRequest.class),
+				any(Pageable.class))).thenReturn(page);
 
-		ResponseEntity<List<TicketResponse>> response = ticketController.getUserTickets(null, userDetails);
+		ResponseEntity<PageResponse<TicketResponse>> response = ticketController.getUserTickets(userDetails, null, null,
+				null, null, null, null, pageable);
 
-		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(200, response.getStatusCode().value());
 		assertNotNull(response.getBody());
-		assertEquals(2, response.getBody().size());
+		assertEquals(2, response.getBody().getContent().size());
 	}
 
 	@Test
 	void getUpcomingTickets_ShouldReturnTickets() {
-		User user = createUser(1L, "user@example.com");
-		CustomUserDetails userDetails = new CustomUserDetails(user);
+		CustomUserDetails userDetails = createUserDetails(1L, "user@example.com");
+		Pageable pageable = PageRequest.of(0, 10);
 
 		TicketResponse ticket1 = createTicketResponse(1L, "TKT-20240115-ABC123", TicketStatus.ACTIVE);
-		List<TicketResponse> tickets = Arrays.asList(ticket1);
+		Page<TicketResponse> page = new PageImpl<>(List.of(ticket1), pageable, 1);
 
-		when(controllerFacade.getUpcomingTickets(user)).thenReturn(tickets);
+		when(ticketRetrievalService.getUserTickets(any(User.class), any(TicketFilterRequest.class),
+				any(Pageable.class))).thenReturn(page);
 
-		ResponseEntity<List<TicketResponse>> response = ticketController.getUpcomingTickets(userDetails);
+		ResponseEntity<PageResponse<TicketResponse>> response = ticketController.getUpcomingTickets(userDetails,
+				pageable);
 
-		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(200, response.getStatusCode().value());
 		assertNotNull(response.getBody());
-		assertEquals(1, response.getBody().size());
+		assertEquals(1, response.getBody().getContent().size());
 	}
 
 	@Test
 	void getTicketById_ShouldReturnTicket() {
-		User user = createUser(1L, "user@example.com");
-		CustomUserDetails userDetails = new CustomUserDetails(user);
+		CustomUserDetails userDetails = createUserDetails(1L, "user@example.com");
 		Long ticketId = 1L;
 
 		TicketResponse ticket = createTicketResponse(ticketId, "TKT-20240115-ABC123", TicketStatus.ACTIVE);
 
-		when(controllerFacade.getTicketById(ticketId, user)).thenReturn(ticket);
+		when(ticketRetrievalService.getTicketById(ticketId, userDetails.getUser())).thenReturn(ticket);
 
 		ResponseEntity<TicketResponse> response = ticketController.getTicketById(ticketId, userDetails);
 
-		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(200, response.getStatusCode().value());
 		assertNotNull(response.getBody());
 		assertEquals(ticketId, response.getBody().getId());
 	}
 
 	@Test
 	void getTicketByCode_ShouldReturnTicket() {
-		User user = createUser(1L, "user@example.com");
-		CustomUserDetails userDetails = new CustomUserDetails(user);
+		CustomUserDetails userDetails = createUserDetails(1L, "user@example.com");
 		String ticketCode = "TKT-20240115-ABC123";
 
 		TicketResponse ticket = createTicketResponse(1L, ticketCode, TicketStatus.ACTIVE);
 
-		when(controllerFacade.getTicketByCode(ticketCode, user)).thenReturn(ticket);
+		when(ticketRetrievalService.getTicketByCode(ticketCode, userDetails.getUser())).thenReturn(ticket);
 
 		ResponseEntity<TicketResponse> response = ticketController.getTicketByCode(ticketCode, userDetails);
 
-		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(200, response.getStatusCode().value());
 		assertNotNull(response.getBody());
 		assertEquals(ticketCode, response.getBody().getTicketCode());
+	}
+
+	@Test
+	void getTicketQRCode_ShouldReturnQRCode() {
+		String ticketCode = "TKT-20240115-ABC123";
+		byte[] qrCode = new byte[] { 1, 2, 3, 4, 5 };
+
+		when(ticketService.generateTicketQRCode(ticketCode)).thenReturn(qrCode);
+
+		ResponseEntity<byte[]> response = ticketController.getTicketQRCode(ticketCode);
+
+		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
+		assertEquals(qrCode, response.getBody());
+	}
+
+	@Test
+	void validateTicket_ShouldReturnOk() {
+		String ticketCode = "TKT-20240115-ABC123";
+
+		ResponseEntity<Void> response = ticketController.validateTicket(ticketCode);
+
+		assertEquals(200, response.getStatusCode().value());
 	}
 }
